# todo-backend-second

./: pyproject.toml
project/: settings.py  urls.py
todo/: models.py  views.py
todo/migrations/: 0001_initial.py
